[package]
name = "penumbra_indexer"
version = "0.1.0"
edition = "2021"
default-run = "penumbra_indexer"

[dependencies]
async-trait = "0.1.86"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tonic =  { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
penumbra = { package = "penumbra-sdk-proto", git = "https://github.com/penumbra-zone/penumbra", features = ["rpc", ], default-features = true, tag = "v1.0.1" }
serde = { version = "1.0.217", features = ["derive"] }
prost = "0.13.4"
prost-types = "0.13.4"

# used by gen
tonic-build = "0.11.0"
walkdir = "2.4.0"
prost-reflect = { version = "0.14.6", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio-stream = "0.1.17"
log = "0.4.25"
env_logger = "0.11.6"
axum = "0.8.1"

[profile.dev.package."*"]
opt-level = 3
